--- a/HTML Practice/html-practice.html
+++ b/HTML Practice/html-practice.html
@@ -192,7 +192,9 @@
 </div>
 <div>
     <h2 style="color:red">Iframe</h2>
-    <iframe src="" frameborder="0"></iframe>
+    
+    <iframe src="image.jpg" name="iframe" frameborder="1" width="100%" height="500px" title="Iframe Example"></iframe>
+    <p><a href="https://www.youtube.com/" target="iframe">Click Here</a></p>
 </div>
 </body>
 </html> 
